Fix compilation of the manual

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -823,7 +823,7 @@ The `InfoACE' level of 4 is really for gurus who are familiar with the
 
 Large parts of this manual,  in  particular  the  description  of  the
 options for running {\ACE}, are directly copied  from  the  respective
-descriptions in the manual~\cite{Ram99} for the standalone version  of
+descriptions in the manual~\cite{Ram99ace} for the standalone version  of
 {\ACE} by Colin Ramsay.  Most  of  the  examples,  in  the  `examples'
 directory and accessed  via  the  `ACEExample'  function,  are  direct
 translations of Colin Ramsay's  `test\#\#\#.in'  files  in  the  `src'
