--- a/doc/install.tex
+++ b/doc/install.tex
@@ -85,7 +85,7 @@ in the `doc' subdirectory.
 
 The subdirectory `standalone-doc' contains the file `ace3001.ps' which
 holds a version of the user manual for the {\ACE} standalone; it forms
-part of~\cite{Ram99}). You should consult  it  if  you  are  going  to
+part of~\cite{Ram99ace}). You should consult  it  if  you  are  going  to
 switch to  the  {\ACE}  standalone,  e.g.~in  order  to  directly  use
 interactive facilities.
 
