--- a/doc/interact.tex
+++ b/doc/interact.tex
@@ -496,7 +496,7 @@ information messages are printed to the {\ACE} output:
 
 \endlist
 
-As an example (drawn from the discussion in \cite{HR99a}) consider the
+As an example (drawn from the discussion in \cite{HR99ace}) consider the
 enumeration   of   the   $448$   coset   numbers   of   the   subgroup
 $\langle  a^2,a^{-1}b \rangle$ of the group
 $$
