--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -167,7 +167,7 @@
   YEAR          = {1999 (preprint)}
 }
 
-@MISC{HR99a,
+@MISC{HR99ace,
   AUTHOR        = {George Havas and Colin Ramsay},
   TITLE         = {Coset enumeration: {\sf ACE} version 3},
   YEAR          = {1999},
@@ -396,13 +396,16 @@
   PAGES         = {15--27}
 }
 
-@BOOK{CLR90,
-  AUTHOR        = {Thomas H. Cormen and Charles E. Leiserson and Ronald
-                        L. Rivest},
-  TITLE         = {Introduction to Algorithms},
-  PUBLISHER     = {The MIT Press},
-  YEAR          = {1990}
-}
+%% Already included in ../../../doc/manual.bib}
+%% ... by removing the `at' symbol BibTeX sees the following as comments:
+%%
+%% BOOK{CLR90,
+%%   AUTHOR        = {Thomas H. Cormen and Charles E. Leiserson and Ronald
+%%                         L. Rivest},
+%%   TITLE         = {Introduction to Algorithms},
+%%   PUBLISHER     = {The MIT Press},
+%%   YEAR          = {1990}
+%% }
 
 @BOOK{MKS76,
   AUTHOR        = {Wilhelm Magnus and Abraham Karrass and Daniel Solitar},
@@ -420,7 +423,7 @@
   YEAR          = {1972}
 }
 
-@TECHREPORT{Ram99,
+@TECHREPORT{Ram99ace,
   AUTHOR        = {Colin Ramsay},
   TITLE         = {{\sf ACE} for Amateurs (Version 3.001)},
   INSTITUTION   = {Centre for Discrete Mathematics and Computing,
