--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -13,6 +13,9 @@
 \input ../../../doc/gapmacro
 \Package{ACE}
 
+% HACK: compatibility with manualbib.xml.bib
+\def\textendash{--}
+
 \BeginningOfBook{ace}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -55,7 +58,7 @@
 %
 \TableOfContents
 \FrontMatter
-\immediate\write\citeout{\bs bibdata{./manual,../../../doc/mrabbrev,../../../doc/manual}}
+\immediate\write\citeout{\bs bibdata{./manual,../../../doc/mrabbrev,../../../doc/manualbib.xml}}
 \Chapters
 \Input{ace}
 \Input{install}
