Change .gaprc to gaprc, change link

--- a/doc/install.tex
+++ b/doc/install.tex
@@ -135,8 +135,8 @@ If {\GAP} cannot find a working binary, the call to `LoadPackage' will
 fail.
 
 If you want to load the {\ACE} package by default,  you  can  put  the
-`LoadPackage' command into your `.gaprc'  file  (see  Section~"ref:The
-.gaprc file" in the {\GAP} Reference Manual).
+`LoadPackage' command into your `gaprc'  file  (see
+Section~"ref:The gap.ini and gaprc files" in the {\GAP} Reference Manual).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
