--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -130,7 +130,7 @@
   PAGES         = {19--25}
 }
 
-%% Already included in ../../../doc/manual.bib}
+%% Already included in ../../../doc/manualbib.xml.bib 
 %% ... by removing the `at' symbol BibTeX sees the following as comments:
 %%
 %% INPROCEEDINGS{Hav91,
@@ -167,13 +167,16 @@
   YEAR          = {1999 (preprint)}
 }
 
-@MISC{HR99a,
-  AUTHOR        = {George Havas and Colin Ramsay},
-  TITLE         = {Coset enumeration: {\sf ACE} version 3},
-  YEAR          = {1999},
-  NOTE          = {{\sf ACE} version 3.001 is available from
-                   {\URL{http://www.csee.uq.edu.au/~cram/ce.html}}}
-}
+%% Already included in ../../../doc/manualbib.xml.bib 
+%% ... by removing the `at' symbol BibTeX sees the following as comments:
+%%
+%% MISC{HR99a,
+%%   AUTHOR        = {George Havas and Colin Ramsay},
+%%   TITLE         = {Coset enumeration: {\sf ACE} version 3},
+%%   YEAR          = {1999},
+%%   NOTE          = {{\sf ACE} version 3.001 is available from
+%%                    {\URL{http://www.csee.uq.edu.au/~cram/ce.html}}}
+%% }
 
 @INCOLLECTION{KB70,
   AUTHOR        = {D.E. Knuth and P.B. Bendix},
@@ -253,7 +256,7 @@
   YEAR          = {1994}
 }
 
-%% Already included in ../../../doc/manual.bib}
+%% Already included in ../../../doc/manualbib.xml.bib 
 %% ... by removing the `at' symbol BibTeX sees the following as comments:
 %%
 %% INCOLLECTION{Neu82,
@@ -396,13 +399,16 @@
   PAGES         = {15--27}
 }
 
-@BOOK{CLR90,
-  AUTHOR        = {Thomas H. Cormen and Charles E. Leiserson and Ronald
-                        L. Rivest},
-  TITLE         = {Introduction to Algorithms},
-  PUBLISHER     = {The MIT Press},
-  YEAR          = {1990}
-}
+%% Already included in ../../../doc/manualbib.xml.bib 
+%% ... by removing the `at' symbol BibTeX sees the following as comments:
+%%
+%% BOOK{CLR90,
+%%   AUTHOR        = {Thomas H. Cormen and Charles E. Leiserson and Ronald
+%%                         L. Rivest},
+%%   TITLE         = {Introduction to Algorithms},
+%%   PUBLISHER     = {The MIT Press},
+%%   YEAR          = {1990}
+%% }
 
 @BOOK{MKS76,
   AUTHOR        = {Wilhelm Magnus and Abraham Karrass and Daniel Solitar},
@@ -420,15 +426,18 @@
   YEAR          = {1972}
 }
 
-@TECHREPORT{Ram99,
-  AUTHOR        = {Colin Ramsay},
-  TITLE         = {{\sf ACE} for Amateurs (Version 3.001)},
-  INSTITUTION   = {Centre for Discrete Mathematics and Computing,
-                   The University of Queensland},
-  YEAR          = {1999},
-  NUMBER        = {14},
-  ADDRESS       = {St.~Lucia 4072, Australia}
-}
+%% Already included in ../../../doc/manualbib.xml.bib 
+%% ... by removing the `at' symbol BibTeX sees the following as comments:
+%%
+%% TECHREPORT{Ram99,
+%%   AUTHOR        = {Colin Ramsay},
+%%   TITLE         = {{\sf ACE} for Amateurs (Version 3.001)},
+%%   INSTITUTION   = {Centre for Discrete Mathematics and Computing,
+%%                    The University of Queensland},
+%%   YEAR          = {1999},
+%%   NUMBER        = {14},
+%%   ADDRESS       = {St.~Lucia 4072, Australia}
+%% }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
