--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -11,6 +11,8 @@
 %Y                      University of Queensland, Australia.
 %%
 \input ../../../doc/gapmacro
+\def\textendash{--}
+\def\a#1{\'}
 \Package{ACE}
 
 \BeginningOfBook{ace}
