--- a/doc/messages.tex
+++ b/doc/messages.tex
@@ -40,10 +40,11 @@ other  {\ACE}  interface  functions.  The  first-observed  (`Info'-ed)
 output from {\ACE}, is {\ACE}'s banner, e.g.
 
 \begintt
-#I  ACE 3.001        Sun Sep 30 21:45:39 2001
+#I  ACE 3.001        Sat Feb 27 11:44:12 2016
 #I  =========================================
 #I  Host information:
-#I    name = rigel
+#I    name = banksia
+#I  ***
 \endtt
 
 If there were any errors in the directives put to  {\ACE},  or  output
@@ -89,7 +90,7 @@ coset table.
 
 \begintt
 =========================================
-ACE 3.001        Sun Sep 30 22:03:36 2001
+ACE 3.001        Sat Feb 27 11:44:17 2016
 \endtt
 
 is only seen when running {\ACE} as a standalone.
