--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -83,6 +83,7 @@ you can achieve this  by  setting  the  global  variable  `TCENUM'  to
 
 \beginexample
 gap> TCENUM:=ACETCENUM;;
+
 \endexample
 
 This    sets    the    function    `CosetTableFromGensAndRels'    (see
@@ -100,6 +101,7 @@ library by assigning `TCENUM' to `GAPTCENUM'.
 
 \beginexample
 gap> TCENUM:=GAPTCENUM;;
+
 \endexample
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -192,10 +194,11 @@ example, no options are passed,  which  means  that  {\ACE}  uses  the
 \beginexample
 gap> F:= FreeGroup( "a", "b", "c", "d", "e", "x", "y");;
 gap> a:= F.1;; b:= F.2;; c:= F.3;; d:= F.4;; e:= F.5;; x:= F.6;; y:= F.7;;
-gap> fgens:= [a, b, c, d, e, x, y,];;
+gap> fgens:= [a, b, c, d, e, x, y];;
 gap> rels:= [ a*b*c^-1, b*c*d^-1, c*d*e^-1, d*e*x^-1,
 >             e*x*y^-1, x*y*a^-1, y*a*b^-1];;
 gap> ACECosetTable(fgens, rels, [c]);;
+
 \endexample
 
 \atindex{break-loop}{@\noexpand`break'-loop}
@@ -225,7 +228,7 @@ Error, no coset table ...
  the `ACE' coset enumeration failed with the result:
  OVERFLOW (a=2 r=1 h=1 n=3; l=5 c=0.00; m=2 t=2)
  called from
-<function>( <arguments> ) called from read-eval-loop
+<function "ACECosetTable">( <arguments> ) called from read-eval-loop
 Entering break read-eval-print loop ...
  try relaxing any restrictive options
  e.g. try the `hard' strategy or increasing `workspace'
@@ -241,6 +244,7 @@ brk> SetACEOptions(: max := 0);
 brk> return;
 [ [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], 
   [ 1 ], [ 1 ], [ 1 ], [ 1 ] ]
+
 \endexample
 
 Observe how the lines  after  the  ```Entering  break  read-eval-print
@@ -260,9 +264,10 @@ result is printed.
 \beginexample
 gap> SetInfoACELevel(2);
 gap> ACECosetTable(fgens, rels, [c]);
-#I  INDEX = 1 (a=1 r=2 h=2 n=2; l=6 c=0.01; m=2049 t=3127)
+#I  INDEX = 1 (a=1 r=2 h=2 n=2; l=6 c=0.00; m=2049 t=3127)
 [ [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], 
   [ 1 ], [ 1 ], [ 1 ], [ 1 ] ]
+
 \endexample
 
 The enumeration result line is the `Info' line  beginning  ```\#I '''.
@@ -279,6 +284,7 @@ gap> ACECosetTable(fgens, rels, [c] : purec);
 #I  INDEX = 1 (a=1 r=2 h=2 n=2; l=4 c=0.00; m=332 t=332)
 [ [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], [ 1 ], 
   [ 1 ], [ 1 ], [ 1 ], [ 1 ] ]
+
 \endexample
 
 {\ACE} needs to define a `t'otal number of only  (relatively-speaking)
@@ -551,6 +557,7 @@ Consider the example `"A5"'. The effect of running
 
 \beginexample
 gap> ACEExample("A5", ACEStart);
+
 \endexample
 
 is essentially equivalent to executing:
@@ -559,6 +566,7 @@ is essentially equivalent to executing:
 gap> file := Filename(DirectoriesPackageLibrary("ace", "examples"), "A5");;
 gap> ACEfunc := ACEStart;;
 gap> ReadAsFunction(file)();
+
 \endexample
 
 except that some internal ``magic'' of `ACEExample' edits the  example
@@ -612,6 +620,7 @@ running
 
 \beginexample
 gap> ACEReadResearchExample("pgrelfind.g");
+
 \endexample
 
 is equivalent to executing:
@@ -619,6 +628,7 @@ is equivalent to executing:
 \beginexample
 gap> Read( Filename(DirectoriesPackageLibrary("ace", "res-examples"),
 >                   "pgrelfind.g") );
+
 \endexample
 
 The examples provided in the `res-examples'  directory  were  used  to
@@ -794,6 +804,7 @@ The command
 
 \beginexample
 gap> SetInfoACELevel(2);
+
 \endexample
 
 enables the display of the results line of an enumeration from {\ACE},
@@ -801,6 +812,7 @@ whereas
 
 \beginexample
 gap> SetInfoACELevel(3);
+
 \endexample
 
 enables the display of  all  of  the  output  from  {\ACE}  (including
@@ -811,6 +823,7 @@ will be displayed via `Info'. Finally,
 
 \beginexample
 gap> SetInfoACELevel(4);
+
 \endexample
 
 enables the display of all the input  directed  to  {\ACE}  (behind  a
@@ -842,13 +855,17 @@ the example found at the end of Section~"Steering  ACE  Interactively"
 which  demonstrates  rather  nicely  how  one  can  use  the  function
 `ACEConjugatesForSubgroupNormalClosure'.
 
-Finally, we wish to acknowledge the contribution of Charles Sims.  The
+We  also  wish  to  acknowledge the contribution of Charles Sims.  The
 inclusion of the `incomplete' (see "option incomplete")  and  `lenlex'
 (see~"option lenlex") options, were made in response  to  requests  to
 the  {\GAP}  developers  to  include  such  options  for  coset  table
 functions. Also, the definition of `lenlex' standardisation  of  coset
 tables (see Section~"Coset Table Standardisation Schemes"), is due  to
 him.
+
+Finally, much of the work since 2005 in modifying the  {\ACE}  package
+particularly for new versions of {\GAP} and in getting {\ACE}  to  its
+new home on `GitHub' has been due to Max Horn.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Changes from earlier versions}
@@ -919,6 +936,13 @@ required. Option `pkgbanner' has been completely removed.
 \item{`5.1'}
 The files `configure' and `Makefile.in' were made more robust to ensure
 they will work well with both {\GAP} 4.4 and {\GAP} 4.
+
+\item{`5.2'}
+Added `SetInfoACELevel(3)' to `tst/aceds.tst', so that the ERROR message
+is visible. This mistake in the test file probably goes back to  version
+4.0. Other changes are due to making the documentation  compatible  with
+{\GAP} 4.7 manuals and {\ACE}'s new home on `GitHub' and using `git' for
+version control.
 
 \endlist
 
