o PackageInfo.g,doc/{{ace,install}.tex,manual.bib},src/al[012].h,      src/{ace,coinc,control,enum,enum0[012],parser,postproc,util[012]}.c      - updated email address for Colin Ramsay, and web address for        George Havas and ACE 3.001.    o CHANGES      - above changes logged in CHANGES                                                          - gregg0

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ The  ACE  package  provides  functions associated  with  Todd-Coxeter  coset
 enumeration by interfacing with the Advanced Coset Enumerator (ACE),
 
 ACE coset enumerator (C) 1995-2001 by George Havas and Colin Ramsay
-    http://www.itee.uq.edu.au/~cram/ce.html
+    http://staff.itee.uq.edu.au/havas
 
 from within GAP 4.
 
@@ -39,7 +39,7 @@ http://www.math.rwth-aachen.de/~Greg.Gamble/ACE/ (Germany)
 
 or the Australian mirror
 
-http://school.maths.uwa.edu.au/~gregg/ACE/          (Perth, Australia)
+http://http://staffhome.ecm.uwa.edu.au/~00021149/ACE/     (Perth, Australia)
 
 or via the Packages links from the GAP sites, which also gives other archive
 types (.bz2, .zip etc.)
@@ -158,4 +158,4 @@ the problem; so please include:
     e-mail: Greg.Gamble@uwa.edu.au
     www:    http://staffhome.ecm.uwa.edu.au/~00021149
   -- 30 April, 2002; 22 December, 2003; 26 January, 2006; 25 January, 2012,
-     24 February, 2016.
+     7 March, 2016.
