--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -20,7 +20,7 @@ The ``Advanced Coset Enumerator'' {\ACE}:
 \begintt
 ACE coset enumerator (C) 1995-2001 by George Havas and Colin Ramsay
 \endtt
-\URL{http://www.itee.uq.edu.au/~cram/ce.html}
+\URL{http://staff.itee.uq.edu.au/havas}
 
 can  be called  from within  {\GAP} through  an interface,  written by
 Alexander Hulpke and Greg Gamble, which is described in this manual.
