--- a/doc/install.tex
+++ b/doc/install.tex
@@ -113,8 +113,8 @@ Loading    ACE (Advanced Coset Enumerator) 5.2
 GAP code by Greg Gamble <Greg.Gamble@uwa.edu.au> (address for correspondence)
        Alexander Hulpke (http://www.math.colostate.edu/~hulpke)
            [uses ACE binary (C code program) version: 3.001]
-C code by  George Havas (http://www.itee.uq.edu.au/~havas)
-           Colin Ramsay (http://www.itee.uq.edu.au/~cram)
+C code by  George Havas (http://staff.itee.uq.edu.au/havas)
+           Colin Ramsay <cram@itee.uq.edu.au>
 
                  For help, type: ?ACE
 ---------------------------------------------------------------------------
