--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -183,7 +183,7 @@
   TITLE         = {Coset enumeration: {\sf ACE} version 3},
   YEAR          = {1999},
   NOTE          = {{\sf ACE} version 3.001 is available from
-                   {\URL{http://www.csee.uq.edu.au/~cram/ce.html}}}
+                   {\URL{http://staff.itee.uq.edu.au/havas}}}
 }
 
 @INCOLLECTION{KB70,
