Remove reference to ancient MacOS versions
It is irrelevant today, and might confuse some people

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -27,8 +27,8 @@ Alexander Hulpke and Greg Gamble, which is described in this manual.
 
 The interface links to an external binary and therefore is only usable
 under UNIX (see  Section~"Installing  the  ACE  Package"  for  how  to
-install  {\ACE}).  It  will  not  work  on  Windows  or  a  pre-MacOSX
-Macintosh. The current version requires at least {\GAP}~4.4. Users who
+install  {\ACE}).  It  will  not  work  on  Windows.
+The current version requires at least {\GAP}~4.4. Users who
 still have {\GAP}~4.3,  must  use  {\ACE}  4.1.  (The  first  versions
 supported {\GAP}~4.2.) {\ACE} can be used through this interface in  a
 variety of ways:
